# RALFS

./: .dockerignore  .env.example  .gitignore  BRANCH_MERGE_SUMMARY.md  BRANCH_STRUCTURE.md  CITATION.cff  COMPLETE_BRANCH_GUIDE.md  Dockerfile  FINAL_COMPARISON.md  Makefile  README.md  REFACTORING_SUMMARY.md  WORKFLOW_CHANGES.md  docker-compose.yml  pyproject.toml  pytest.ini  ralfs.yaml
.github/workflows/: tests.yml
configs/: ralfs.yaml
configs/data/: arxiv.yaml  debug.yaml  default.yaml  govreport.yaml
configs/eval/: eval.yaml
configs/experiment/: baseline.yaml  full_system.yaml
configs/generator/: fid.yaml  fid_base.yaml  fid_xl.yaml
configs/retriever/: dense.yaml  hybrid.yaml  sparse.yaml
configs/train/: a100.yaml  debug.yaml  default.yaml  fid_base.yaml  fid_train.yaml  multi_gpu.yaml  reranker.yaml  retriever.yaml
docs/: API.md  DOCKER.md  IMPROVEMENTS_SUMMARY.md  POETRY_GUIDE.md  TRAINING_GUIDE.md
example/: hybrid_demo.py  retrieval_demo.py
examples/: demo_inference.py  hybrid_demo.py  retriever_demo.py
notebook/: RALFS.ipynb
ralfs/: __init__.py  cli.py  cli_old.py
ralfs/core/: __init__.py  config.py  constants.py  logging.py
ralfs/data/: __init__.py  chunker.py  downloader.py  indexer.py  processor.py
ralfs/evaluation/: __init__.py  faithfulness.py  human.py  main.py  metrics.py
ralfs/generator/: __init__.py  adaptive_k.py  base.py  factory.py  fid.py
ralfs/retriever/: __init__.py  base.py  colbert.py  dense.py  factory.py  hybrid.py  reranker.py  sparse.py  utils.py
ralfs/training/: __init__.py  dataset.py  trainer.py
ralfs/utils/: __init__.py  io.py  reproducibility.py
scripts/: build_index.sh  evaluate.sh  generate.sh  install_deps.sh  pipeline.sh  preprocess.sh  retrieve.sh  run_ablation_study.py  run_build_index.sh  run_human_eval.sh  run_hybrid_index.sh  run_preprocess.sh  run_train_generator.sh  setup_colab.sh  setup_configs.sh  train.sh  train_fid.sh  train_full_example.sh
src/: __init__.py  cli.py
src/data/: __init__.py  build_index.py  dataset.py  download.py  preprocess.py
src/eval/: __init__.py  comprehensive_metrics.py  human_eval_tools.py  metrics.py
src/evaluation/: faithfulness.py  human_eval.py  metrics.py
src/faithfulness/: __init__.py  egf_checker.py  loss.py  qa_checker.py
src/generator/: __init__.py  adaptive_fid.py  fid_model.py  inference.py  train_generator.py
src/ralfs/: __init__.py  cli.py
src/ralfs/core/: __init__.py  config.py  constants.py  logging.py
src/ralfs/data/: __init__.py  chunker.py  downloader.py  indexer.py  processor.py
src/ralfs/evaluation/: __init__.py  faithfulness.py  human.py  main.py  metrics.py
src/ralfs/generator/: __init__.py  base.py  factory.py  fid.py
src/ralfs/retriever/: __init__.py  base.py  colbert.py  dense.py  factory.py  hybrid.py  reranker.py  sparse.py  utils.py
src/ralfs/training/: __init__.py  dataset.py  trainer.py
src/ralfs/utils/: __init__.py  io.py
src/reranker/: __init__.py  cross_encoder.py  train_reranker.py
src/retriever/: __init__.py  adaptive_fid.py  contriever.py  encoder.py  hybrid.py  ranker.py  retriever.py  train_retriever.py  utils.py
src/training/: fid_dataset.py  train_fid.py  trainer.py
src/utils/: config.py  io.py  logging.py
tests/: test_adaptive_k.py  test_chunker.py  test_config.py  test_configs.py  test_constants.py  test_data.py  test_data_integration.py  test_dense_retriever.py  test_downloader.py  test_evaluation.py  test_factory.py  test_fid_generator.py  test_generator.py  test_generator_base.py  test_generator_factory.py  test_generator_integration.py  test_hybrid.py  test_hybrid_retriever.py  test_indexer.py  test_io.py  test_logging.py  test_pipeline.py  test_processor.py  test_reranker.py  test_retriever.py  test_retriever_base.py  test_setup.py  test_sparse_retriever.py  test_training.py  test_utils.py
