[tool.poetry]
name = "ralfs"
version = "0.1.0"
description = "Retrieval-Augmented Long-Form Summarization System"
authors = ["Ashaduzzaman Sarker <ashaduzzaman2505@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

# ------------------------
# CORE DEPENDENCIES
# ------------------------
# Torch: special handling for macOS
torch = { version = "^2.4.0", markers = "sys_platform != 'darwin'" }
torch-macos = { version = "^2.4.0", markers = "sys_platform == 'darwin'" }

transformers = "4.44.2"
sentence-transformers = "3.0.1"
huggingface-hub = "<1.0.0"
accelerate = "0.33.0"
datasets = "^2.21.0"

faiss-cpu = "^1.8.0"
faiss-gpu = { version = "^1.8.0", optional = true }

hydra-core = "^1.3.2"
omegaconf = "^2.3.0"

nltk = "^3.9.1"
rouge-score = "^0.1.2"
evaluate = "^0.4.2"

# Optional
spacy = { version = "^3.7.5", optional = true }
en-core-web-sm = { version = "*", optional = true, markers = "extra == 'spacy'" }

[tool.poetry.extras]
gpu = ["faiss-gpu"]
spacy = ["spacy", "en-core-web-sm"]

# ------------------------
# DEV DEPENDENCIES
# ------------------------
[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
mypy = "^1.11"
black = "^24.8"
isort = "^5.13"
ruff = "^0.6.0"
pre-commit = "^3.8"

# ------------------------
# PYTORCH SOURCE (REQUIRED)
# ------------------------
[tool.poetry.sources]
pytorch = { url = "https://download.pytorch.org/whl/cpu", priority = "explicit" }

# ------------------------
# BUILD SYSTEM
# ------------------------
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# ------------------------
# TOOL CONFIGS
# ------------------------
[tool.black]
line-length = 100
target-version = ['py310', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
select = ["E", "W", "F", "B", "C4", "UP"]
ignore = ["E501"]
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
no_implicit_reexport = true
warn_unused_ignores = true
