[tool.poetry]
name = "ralfs"
version = "1.0.0"
description = "Retrieval-Augmented Long-Form Summarization"
authors = ["Ashaduzzaman Sarker <ashaduzzaman2505@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ashaduzzaman-sarker/RALFS"
repository = "https://github.com/ashaduzzaman-sarker/RALFS"
packages = [{ include = "ralfs", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = "^2.4.0"
transformers = "4.44.2"
sentence-transformers = "3.0.1"
datasets = "^2.21.0"
faiss-cpu = "^1.8.0"
accelerate = "0.33.0"
peft = "0.11.1"

hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
rich = "^13.7.0"
rank-bm25 = "^0.2.2"
spacy = "^3.7.5"
rouge-score = "^0.1.2"
bert-score = "^0.3.13"
evaluate = "^0.4.2"
colbert-ai = "^0.2.1"
bitsandbytes = "^0.48.2"

[tool.poetry.extras]

[tool.poetry.scripts]
ralfs = "ralfs.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
mypy = "^1.11.0"
black = "^24.8.0"
isort = "^5.13.2"
ruff = "^0.6.8"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py310", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
target-version = "py310"
select = ["E", "W", "F", "B", "C4", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
